# Calculatrice_RPN

./: .env.example  Makefile  README.md  local.txt  project_to_txt.py  render.yaml
.github/workflows/: pages.yml
backend/: DELIVERABLES.md  Dockerfile  Dockerfile.dev  IMPROVEMENTS_SUMMARY.md  INSTALL.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  roadmap.md  todo.md
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py  schemas.py
backend/app/core/: config.py  exceptions.py
backend/app/domain/: __init__.py  rpn_calculator.py
backend/app/services/: __init__.py  stack_service.py
backend/tests/: __init__.py  test_api.py  test_rpn_calculator.py
deployment/docker/: Makefile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docs/: COMPLETE_SUMMARY.md  DEPLOYMENT.md  DOCKER_ARCHITECTURE.md  DOCKER_SUMMARY.md  FILES_CREATED.md  FINAL_IMPROVEMENTS.md  IMPROVEMENTS.md  QUICKSTART_DOCKER.md  README.md  RESTRUCTURING_COMPLETE.md  SEPARATION_GUIDE.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Toast.tsx
frontend/src/hooks/: useRpnStack.ts  useTheme.ts  useToast.ts
frontend/src/services/: apiService.ts  enhancedStackService.ts
